--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Download gamecontrollerdb.txt
         run: |
           curl https://raw.githubusercontent.com/gabomdq/SDL_GameControllerDB/master/gamecontrollerdb.txt -o gamecontrollerdb_sdl.txt
+      - name: Merge gamecontrollerdb
+        run: |
           grep "platform:Linux" gamecontrollerdb_sdl.txt > ./main/gamecontrollerdb.txt
           cat ./main/gamecontrollerdb_mister.txt >> ./main/gamecontrollerdb.txt
       - name: Check in release
