Add original gamecontrollerdb header

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ jobs:
           curl https://raw.githubusercontent.com/gabomdq/SDL_GameControllerDB/master/gamecontrollerdb.txt -o gamecontrollerdb_sdl.txt
       - name: Merge gamecontrollerdb
         run: |
-          grep "platform:Linux" gamecontrollerdb_sdl.txt > ./main/gamecontrollerdb.txt
+          cat ./main/gamecontrollerdb_header.txt > ./main/gamecontrollerdb.txt
+          grep "platform:Linux" gamecontrollerdb_sdl.txt >> ./main/gamecontrollerdb.txt
           cat ./main/gamecontrollerdb_mister.txt >> ./main/gamecontrollerdb.txt
       - name: Check in release
         uses: EndBug/add-and-commit@v7
